# pre-commit-text-block

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  text-find.py
