[metadata]
name = textfind
version = 0.1.0
description = find undesired text in your code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mounirmesselmeni/pre-commit-textfind
author = Mounir Messelmeni
author_email = messelmeni.mounir@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = textfind
python_requires = >=3.7

[options.entry_points]
console_scripts =
    textfind = textfind:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false